# emby-plex

./: .gitignore  README.md
PMSManageBot-us/scripts/: setup_stream_reverse_proxy.sh
backend/: .env.example  pyproject.toml
backend/app/: bot.py  config.py  database.py  deps.py  enums.py  main.py  models.py  schemas.py
backend/app/routers/: __init__.py  admin.py  auth.py  health.py  requests.py  search.py
backend/app/services/: auth.py  catalog.py  moviepilot.py  notifications.py  request_identity.py  request_workflow.py  search_types.py  tmdb_links.py
backend/tests/: test_api.py  test_bot_tmdb_link.py  test_moviepilot_service.py  test_tmdb_links.py
miniapp/: .env.example  index.html  package-lock.json  package.json  tsconfig.app.json
miniapp/src/: App.tsx  main.tsx  vite-env.d.ts
miniapp/src/components/: AuthGate.tsx  RequestDetailPanel.tsx  RequestsPanel.tsx  SearchPanel.tsx  StatusBadge.tsx
miniapp/src/lib/: api.ts  requestStatus.ts  types.ts
miniapp/src/styles/: app.css
moviepilot-rss-best-version/: README.md  package.v2.snippet.json
moviepilot-rss-best-version/plugins.v2/rssbestversion/: __init__.py
