[project]
name = "moviepilot-request-system-backend"
version = "0.1.0"
description = "FastAPI backend for the MoviePilot Telegram + MiniApp request system"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.116.0,<1.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
  "sqlalchemy>=2.0.40,<3.0.0",
  "pydantic-settings>=2.10.0,<3.0.0",
  "httpx>=0.28.1,<1.0.0",
  "itsdangerous>=2.2.0,<3.0.0",
  "python-telegram-bot>=22.0,<23.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0,<9.0.0",
  "pytest-asyncio>=1.0.0,<2.0.0",
  "ruff>=0.12.0,<1.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

